--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:mysql://localhost:3306/loanapi?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Istanbul
-spring.datasource.username=admin
+spring.datasource.url=jdbc:mysql://localhost:3357/loanapi?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Istanbul
+spring.datasource.username=root
 spring.datasource.password=beran123
 spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=DEBUG
