--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 spring.datasource.url=jdbc:mysql://localhost:3357/loanapi?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Istanbul
 spring.datasource.username=root
 spring.datasource.password=beran123
@@ -6,5 +6,6 @@ spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=never
+spring.sql.init.mode=always
+spring.sql.init.platform=mysql
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
